[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Examples/Simple/Particles/Particle.gd" type="Script" id=1]
[ext_resource path="res://src/SplatterSystem/ParticleCollider.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/particle-yellow.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.55557, 8.61581 )

[node name="Particle" type="Sprite"]
texture = ExtResource( 4 )
script = ExtResource( 1 )

[node name="ParticleCollider" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParticleCollider"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Tween" type="Tween" parent="."]

[connection signal="particle_collided" from="ParticleCollider" to="." method="_on_ParticleCollider_particle_collided"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
